<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gapis.drive.folderselector.FolderPickerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:liftOnScroll="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/folder_picker"
            app:title="@string/pick_a_folder" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <TextView
            android:id="@+id/selected_path_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_path"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/selected_path"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/no_information"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_path_title" />

        <TextView
            android:id="@+id/drive_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_drive"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_path"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintTop_toBottomOf="@id/drive_title"/>

        <ProgressBar
            android:id="@+id/drives_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <RadioGroup
            android:id="@+id/drives_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginEnd="@dimen/big_padding"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/folders_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_folder"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drives_progress_bar"/>

        <Button
            android:id="@+id/parent_folder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/big_padding"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="@id/folders_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/folders_title" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            app:layout_constraintTop_toBottomOf="@id/parent_folder_button"/>

        <ProgressBar
            android:id="@+id/folders_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/separator2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/folder_list_item" />
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:theme="@style/ToolbarTheme"

        app:hideOnScroll="true"
        app:fabAnimationMode="slide"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="@dimen/big_padding"
        android:backgroundTint="@color/black"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:menu="@menu/bottom_folder_picker"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signInFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/common_signin_button_text_long"
        android:foregroundTint="@color/colorPrimary"
        android:onClick="signIn"
        android:src="@drawable/googleg_standard_color_18"
        app:borderWidth="3dp"
        app:layout_anchor="@id/bottomAppBar"
        app:tint="@null" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>